tests/errors/sem3.kt
val x = "hello"; // String not allowed for inferred